--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,17 @@
   color: white;
   text-decoration: none;
 }
+
+.project-list-img {
+  max-height: 200px;
+  max-width: 200px;
+  overflow: hidden;
+}
+
+.project-list-text {
+  word-wrap: break-word;
+  width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
